Modified the assignment by removing unnecessary information

--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
 </head>
 <body>
     <header>
-        <h1><a href="index.html">Eddie</a></h1>
+        <h1>Eddie</h1>
         <p><strong>Professional Gamer | Streamer | Esports Champion</strong></p>
     </header>
 
     <nav arial-label="Main Navigation">
         <ul>
-            <li><a href="#bio">Bio</a></li>
-            <li><a href="#achievements">Achievements</a></li>
-            <li><a href="#favorite-games">Favorite Games</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#">Bio</a></li>
+            <li><a href="#">Achievements</a></li>
+            <li><a href="#">Favorite Games</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 
     <main>
         <section id="bio">
             <h2>About Me</h2>
-            <img src="ed.jpg" alt="Eddie" width="300" height="300" />
             <p>Hey there! I'm Edmond, but most people online know me as Eddie.</p>
             <p>I'm a full-time gamer from Nakuru, Kenya with a passion for strategy games and first-person shooters.</p>
             <p>I've been gaming since I was 15 and I love competing in international tournaments.</p>
@@ -48,16 +47,6 @@
                 <li>Call of Duty: Warzone</li>
                 <li>League of Legends</li>
                 <li>Minecraft </li>
-        </section>
-
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <p>Want to collaborate or sponsor a stream? Reach out via:</p>
-            <address>
-                Email: <a href="mailto:edmondweb23@gmail.com">edmondweb23@gmail.com</a><br />
-                Twitch: <a href="https://www.twitch.tv/edmondweb" target="_blank" rel="noopener">twitch.tv/edmondweb</a><br />
-                X: <a href="https://x.com/edmondweb_23" target="_blank" rel="noopener">@edmondweb_23</a>
-            </address>
         </section>
     </main>
 
